--- a/projects/01_fyyur/src/requirements.txt
+++ b/projects/01_fyyur/src/requirements.txt
@@ -1,5 +1,28 @@
-babel==2.9.0
+alembic==1.6.5
+appdirs==1.4.4
+Babel==2.9.0
+certifi==2021.5.30
+click==8.0.1
+distlib==0.3.2
+filelock==3.0.12
+Flask==2.0.1
+Flask-Migrate==3.0.1
+Flask-Moment==0.11.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+greenlet==1.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+Mako==1.1.4
+MarkupSafe==2.0.1
+pipenv==2021.5.29
+psycopg2==2.8.6
 python-dateutil==2.6.0
-flask-moment==0.11.0
-flask-wtf==0.14.3
-flask_sqlalchemy==2.4.4
+python-editor==1.0.4
+pytz==2021.1
+six==1.16.0
+SQLAlchemy==1.4.17
+virtualenv==20.4.7
+virtualenv-clone==0.5.4
+Werkzeug==2.0.1
+WTForms==2.3.3
